k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      containers:
        - image: mamut89/k8s:wishlist-java
          securityContext:
            allowPrivilegeEscalation:
              false
            runAsNonRoot:
              true
          name: wishlist
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
