k8s/wishlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      name: wishlist-pod
      labels:
        app: wishlist
    spec:
      containers:
        - image: mulleracr.azurecr.io/wishlist:latest
          name: wishlist
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
