k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-app
spec:
  type: ClusterIP
  selector:
    app: wishlist
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
