k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: wishlist-app
                port:
                  name: http
          - path: /dev(?:/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wishlist-app
                port:
                  name: http
          - path: /test(?:/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wishlist-app
                port:
                  name: http
